--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.build.timestamp.format>yyMMdd-HHmm</maven.build.timestamp.format>
     </properties>
 
     <build>
@@ -48,6 +49,7 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <finalName>${project.artifactId}-${project.version}-build${maven.build.timestamp}</finalName>
     </build>
 
     <repositories>
