--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Ultracoins
-version: '1.1'
+version: ${project.version}-build${maven.build.timestamp}
 main: net.bali0531.ultracoins.Ultracoins
 api-version: '1.20'
 prefix: [ ULTRACOINS ]
